--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -5,31 +5,13 @@ body {
 }
 
 body {
-  align-items: center;
   display: flex;
-  justify-content: center;
-
-  background: linear-gradient(to bottom right, #444444, #009a5b);
-  font-size: 1.5rem;
+  flex-direction: column;
+  margin: 0rem 2rem;
 }
 
 main {
-  color: #fff6d5;
+  color: #013e3f;
   font-family: sans-serif;
-  text-align: center;
-}
-
-.logo {
-  height: 20em;
-}
-
-.heart:after {
-  content: "❤️";
-
-  font-size: 1.75em;
-}
-
-h1 + .subtitle {
-  display: block;
-  margin-top: -1em;
+  text-align: left;
 }
