--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -67,9 +67,26 @@ footer {
   background-color: #013e3f;
   color: white;
 
-
-
   .footer-body {
     padding: 0rem 2rem;
   }
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.page-centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
