login and logout in header

--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -50,6 +50,15 @@ header {
   padding: 0rem 2rem;
 }
 
+.header-link {
+  color: white;
+  text-decoration: none;
+  background-color: #013e3f;
+  border: none;
+  cursor: pointer;
+}
+
+
 footer {
   // Configuration A
   min-height: 2rem;
