--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -100,11 +100,36 @@ footer {
   gap: 0.5rem;
 }
 
+.form-button-primary {
+  padding: 0.5rem;
+  background-color: #013e3f;
+  color: white;
+  border: none;
+  cursor: pointer;
+  max-width: fit-content;
+}
+
+.form-button-secondary {
+  padding: 0.5rem;
+  background-color: white;
+  color: #013e3f;
+  border: none;
+  cursor: pointer;
+  max-width: fit-content;
+}
+
+.home-write-post-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 1rem;
+}
+
 .blog-posts-list-container {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  margin: 1rem 0rem;
+  margin: 1rem;
 }
 
 .post-list {
@@ -127,5 +152,25 @@ footer {
   .blog-post-content {
     padding: 2rem;
     background-color: #013e3f34;
+  }
+}
+
+.blog-post-form {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  max-width: 60%;
+  gap: 0.5rem;
+
+  .blog-post-form-input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .blog-post-form-action-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
   }
 }
