load user info with admin attribute

--- a/frontend/index.scss
+++ b/frontend/index.scss
@@ -58,6 +58,12 @@ header {
   cursor: pointer;
 }
 
+.header-action-container {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
 
 footer {
   // Configuration A
